@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: php_date.c,v 1.43.2.45.2.51.2.13 2008/01/27 17:44:29 derick Exp $ */
+/* $Id: php_date.c,v 1.43.2.45.2.51.2.14 2008/01/28 20:30:50 derick Exp $ */
 
 #include "php.h"
 #include "php_streams.h"
@@ -182,6 +182,7 @@ const zend_function_entry date_functions[] = {
 	PHP_FE(date_date_set, NULL)
 	PHP_FE(date_isodate_set, NULL)
 	PHP_FE(date_timestamp_set, NULL)
+	PHP_FE(date_timestamp_get, NULL)
 
 	PHP_FE(timezone_open, NULL)
 	PHP_FE(timezone_name_get, NULL)
@@ -215,6 +216,7 @@ const zend_function_entry date_funcs_date[] = {
 	PHP_ME_MAPPING(setDate,		date_date_set,		NULL, 0)
 	PHP_ME_MAPPING(setISODate,	date_isodate_set,	NULL, 0)
 	PHP_ME_MAPPING(setTimestamp,	date_timestamp_set, NULL, 0)
+	PHP_ME_MAPPING(getTimestamp,	date_timestamp_get, NULL, 0)
 	{NULL, NULL, NULL}
 };
 
@@ -2264,6 +2266,32 @@ PHP_FUNCTION(date_timestamp_set)
 	DATE_CHECK_INITIALIZED(dateobj->time, DateTime);
 	timelib_unixtime2gmt(dateobj->time, (timelib_sll)timestamp);
 	timelib_update_ts(dateobj->time, NULL);
+}
+/* }}} */
+
+/* {{{ proto long date_timestamp_get(DateTime object)
+   Gets the Unix timestamp.
+*/
+PHP_FUNCTION(date_timestamp_get)
+{
+	zval         *object;
+	php_date_obj *dateobj;
+	long          timestamp;
+	int           error;
+
+	if (zend_parse_method_parameters(ZEND_NUM_ARGS() TSRMLS_CC, getThis(), "O", &object, date_ce_date) == FAILURE) {
+		RETURN_FALSE;
+	}
+	dateobj = (php_date_obj *) zend_object_store_get_object(object TSRMLS_CC);
+	DATE_CHECK_INITIALIZED(dateobj->time, DateTime);
+	timelib_update_ts(dateobj->time, NULL);
+
+	timestamp = timelib_date_to_int(dateobj->time, &error);
+	if (error) {
+		RETURN_FALSE;
+	} else {
+		RETVAL_LONG(timestamp);
+	}
 }
 /* }}} */
 
